Make the local build work of the box
Enable some profiles by default and add support for LTS JDK other
than 8.