@@ -52,7 +52,7 @@
     <common-cli.version>1.5.0</common-cli.version>
 
     <powermock.version>2.0.9</powermock.version>
-    <testcontainers.version>1.15.3</testcontainers.version>
+    <testcontainers.version>1.18.3</testcontainers.version>
     <bigquery.spark.version>0.23.2</bigquery.spark.version>
     <snowflake.spark.version>2.10.0-spark_3.2</snowflake.spark.version>
     <snowflake.jdbc.version>3.13.15</snowflake.jdbc.version>
@@ -235,7 +235,13 @@
     <!-- scala profiles -->
     <profile>
       <id>scala-2.12</id>
+      <activation>
+        <!-- 2.13 should really be the default but some libraries do not have releases for 2.13 yet -->
+        <activeByDefault>true</activeByDefault>
+      </activation>
       <properties>
+        <!-- 2.12.15 is the minimum, because of https://github.com/scala/bug/issues/12419) -->
+        <!-- required fix is https://github.com/scala/scala/pull/9676 -->
         <scala.version>2.12.18</scala.version>
         <scala.binary.version>2.12</scala.binary.version>
       </properties>
@@ -381,6 +387,24 @@
             <include>**/*IT.*</include>
           </includes>
           <trimStackTrace>false</trimStackTrace>
+          <!-- copied from https://github.com/apache/spark/blob/3941369d13ad885eac21bd8ac1769aaf1a325c5a/launcher/src/main/java/org/apache/spark/launcher/JavaModuleOptions.java -->
+          <argLine>
+            -XX:+IgnoreUnrecognizedVMOptions
+            --add-opens=java.base/java.lang=ALL-UNNAMED
+            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+            --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+            --add-opens=java.base/java.io=ALL-UNNAMED
+            --add-opens=java.base/java.net=ALL-UNNAMED
+            --add-opens=java.base/java.nio=ALL-UNNAMED
+            --add-opens=java.base/java.util=ALL-UNNAMED
+            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+            --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+            --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
+            --add-opens=java.base/sun.security.action=ALL-UNNAMED
+            --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+            --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
     </plugins>
